# LuddyHackathonSP26

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  openapi.yaml  test-result.txt
backend/: Cargo.toml
demo/: README.md  index.html  script.js  stress.go  style.css
migrations/: 20260418000938_setup.sql  20260418034617_unique_scores.sql  20260418035328_score_history.sql  20260418051105_strict_names.sql  20260418051718_token.sql  20260418164121_score_unlogged.sql
src/: coalescer.rs  config.rs  lib.rs  main.rs  router.rs
src/models/: mod.rs  score.rs  score_history.rs  token.rs
src/routes/: admin.rs  demo.rs  history.rs  leaderboard.rs  mod.rs  score.rs
