[package]
name = "luddy_hackathon_sp26"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.6.1", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "migrate", "postgres", "runtime-tokio", "time", "uuid"] }
time = "0.3.47"
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["v4"] }
