[package]
name = "luddy_hackathon_sp26"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.6.1", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
hex = "0.4.3"
serde = "1.0.228"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["macros", "migrate", "postgres", "runtime-tokio", "time", "uuid"] }
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "signal"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }